--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -91,22 +91,81 @@
           <div class="legal">&copy; 2023 by trillo . All rights reserved.</div>
         </nav>
         <main class="hotel-view">
-          <div class="images">
-            <img src="img/hotel-1.jpg" alt="" />
-            <img src="img/hotel-2.jpg" alt="" />
-            <img src="img/hotel-3.jpg" alt="" />
+          <div class="gallary">
+            <figure class="gallary__item">
+              <img src="img/hotel-1.jpg" alt="hotel-1" class="gallary__photo" />
+            </figure>
+            <figure class="gallary__item">
+              <img src="img/hotel-2.jpg" alt="hotel-2" class="gallary__photo" />
+            </figure>
+            <figure class="gallary__item">
+              <img src="img/hotel-3.jpg" alt="hotel-3" class="gallary__photo" />
+            </figure>
           </div>
-          <div class="second-header">
-            <p>hotel las palmes</p>
-            <div class="right">
-              <p>Albufeira, Portugal</p>
-              <div>
-                <P>8.6</P>
-                <span>429 votes</span>
-              </div>
+          <div class="overview">
+            <h1 class="overview__heading">hotel las Palmes</h1>
+            <div class="overview__stars">
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+            </div>
+            <div class="overview__location">
+              <svg class="overview__icon-location">
+                <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+              </svg>
+              <button class="btn-inline">Albufeira, Portugal</button>
+            </div>
+            <div class="overview__rating">
+              <div class="overview__rating-avarage">8.6</div>
+              <div class="overview__rating-count">429 votes</div>
             </div>
           </div>
-          hotel-view
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+                nisi dignissimos debitis ratione sapiente saepe. Accusantium
+                cumque, quas, ut corporis incidunt deserunt quae architecto
+                voluptate.
+              </p>
+              <p class="paragraph">
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+              </p>
+              <ul class="list">
+                <li class="list__item">Close to the beatch</li>
+                <li class="list__item">braekfast included</li>
+                <li class="list__item">freeairport shuttle</li>
+                <li class="list__item">free wifi in all rooms</li>
+                <li class="list__item">air conditioning and heating</li>
+                <li class="list__item">pets allowed</li>
+                <li class="list__item">we speak all languages</li>
+                <li class="list__item">perfect for family</li>
+              </ul>
+              <div class="recommend">
+                <p class="recommend__count">Lucy and 3 other friends recommend this hotel.
+                </p>
+                <div class="recommend__friends">
+                  <img src="img/user-3.jpg" alt="friend1" class="recommend__photo"/>
+                  <img src="img/user-4.jpg" alt="friend2" class="recommend__photo"/>
+                  <img src="img/user-5.jpg" alt="friend3"class="recommend__photo"/>
+                  <img src="img/user-6.jpg" alt="friend4"class="recommend__photo"/>
+                </div>
+              </div>
+            </div>
+            <div class="user-reviews">user-reviews</div>
+          </div>
         </main>
       </div>
     </div>
