--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -55,7 +55,7 @@
       <div class="content">
         <nav class="sidebar">
           <ul class="side-nav">
-            <li class="side-nav__item">
+            <li class="side-nav__item active">
               <a href="#" class="side-nav__link">
                 <svg class="side-nav__icon">
                   <use xlink:href="img/sprite.svg#icon-home"></use>
@@ -141,7 +141,8 @@
                 voluptate.
               </p>
               <p class="paragraph">
-                Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae
+                architecto voluptate delectus, inventore iure aliquid aliquam.
               </p>
               <ul class="list">
                 <li class="list__item">Close to the beatch</li>
@@ -154,17 +155,74 @@
                 <li class="list__item">perfect for family</li>
               </ul>
               <div class="recommend">
-                <p class="recommend__count">Lucy and 3 other friends recommend this hotel.
+                <p class="recommend__count">
+                  Lucy and 3 other friends recommend this hotel.
                 </p>
                 <div class="recommend__friends">
-                  <img src="img/user-3.jpg" alt="friend1" class="recommend__photo"/>
-                  <img src="img/user-4.jpg" alt="friend2" class="recommend__photo"/>
-                  <img src="img/user-5.jpg" alt="friend3"class="recommend__photo"/>
-                  <img src="img/user-6.jpg" alt="friend4"class="recommend__photo"/>
+                  <img
+                    src="img/user-3.jpg"
+                    alt="friend1"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="friend2"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-5.jpg"
+                    alt="friend3"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-6.jpg"
+                    alt="friend4"
+                    class="recommend__photo"
+                  />
                 </div>
               </div>
             </div>
-            <div class="user-reviews">user-reviews</div>
+            <div class="user-reviews">
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
+                  doloremque architecto dicta animi, totam, itaque officia ex.
+                </blockquote>
+                <figcaption class="review__user">
+                  <img src="/img/user-1.jpg" alt="" class="review__photo" />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Nick smith</p>
+                    <p class="review__user-date">Feb 23rd,2017</p>
+                  </div>
+                  <div class="review__rating">7.8</div>
+                </figcaption>
+              </figure>
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
+                  doloremque architecto dicta animi.
+                </blockquote>
+                <figcaption class="review__user">
+                  <img src="/img/user-2.jpg" alt="" class="review__photo" />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Mary somath</p>
+                    <p class="review__user-date">sept 20rd,2017</p>
+                  </div>
+                  <div class="review__rating">9.3</div>
+                </figcaption>
+              </figure>
+              <button class="btn-inline">show all <span>&rarr;</span></button>
+            </div>
+          </div>
+          <!-- call to action -->
+          <div class="cta">
+            <h2 class="cta__book-now">
+              Good news ! we have 4 free rooms for your selected dates
+            </h2>
+            <button class="btn">
+              <span class="btn__invisiable">only 4 rooms left</span>
+              <span class="btn__visiable">book now</span>
+            </button>
           </div>
         </main>
       </div>
