--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -43,7 +43,9 @@
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-map-pin"></use>
         </svg>
-        <h4 class="heading--4 heading--4--dark">All homes in in top locations</h4>
+        <h4 class="heading--4 heading--4--dark">
+          All homes in in top locations
+        </h4>
         <p class="feature__text">
           Tenetur distinctio necessitatibus pariatur voluptatibus quidem
           consequatur harum.
@@ -80,8 +82,20 @@
         </p>
       </div>
     </section>
-    <div class="story__pictures">story__pictures</div>
-    <div class="story__content">story__content</div>
+    <div class="story__pictures">
+      <img src="img/story-1.jpeg" alt="story-1" class="story__pictures--1"/>
+      <img src="img/story-2.jpeg" alt="story-2" class="story__pictures--2"/>
+    </div>
+    <div class="story__content">
+      <h3 class="heading--3 mb-sm">HAPPY CUSTOMERS</h3>
+      <h2 class="heading--2 heading--2--dark mb-md">“The best decision of our lives”</h2>
+      <p class="feature__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+        distinctio necessitatibus pariatur voluptatibus. Quidem consequatur
+        harum volupta!
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
     <section class="homes">homes</section>
     <section class="gallary">gallary</section>
     <footer class="footer">footer</footer>
