--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -83,12 +83,14 @@
       </div>
     </section>
     <div class="story__pictures">
-      <img src="img/story-1.jpeg" alt="story-1" class="story__pictures--1"/>
-      <img src="img/story-2.jpeg" alt="story-2" class="story__pictures--2"/>
+      <img src="img/story-1.jpeg" alt="story-1" class="story__pictures--1" />
+      <img src="img/story-2.jpeg" alt="story-2" class="story__pictures--2" />
     </div>
     <div class="story__content">
       <h3 class="heading--3 mb-sm">HAPPY CUSTOMERS</h3>
-      <h2 class="heading--2 heading--2--dark mb-md">“The best decision of our lives”</h2>
+      <h2 class="heading--2 heading--2--dark mb-md">
+        “The best decision of our lives”
+      </h2>
       <p class="feature__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
         distinctio necessitatibus pariatur voluptatibus. Quidem consequatur
@@ -98,7 +100,7 @@
     </div>
     <section class="homes">
       <div class="home">
-        <img src="/img/house-1.jpeg" alt="house-1" class="home__img">
+        <img src="/img/house-1.jpeg" alt="house-1" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -127,166 +129,201 @@
           </svg>
           <p>1,200,000</p>
         </div>
-        <button class="btn">contact realtor</button></div>
-        <div class="home">
-          <img src="/img/house-2.jpeg" alt="house-1" class="home__img">
-          <svg class="home__like">
-            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        <button class="btn">contact realtor</button>
+      </div>
+      <div class="home">
+        <img src="/img/house-2.jpeg" alt="house-1" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Modern Glass Villa</h5>
+        <div class="home__location">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <h5 class="home__name">Modern Glass Villa</h5>
-          <div class="home__location">
-            <svg>
-              <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-            </svg>
-            <p>Canada</p>
-          </div>
-          <div class="home__rooms">
-            <svg>
-              <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-            </svg>
-            <p>6 rooms</p>
-          </div>
-          <div class="home__area">
-            <svg>
-              <use xlink:href="img/sprite.svg#icon-expand"></use>
-            </svg>
-            <p>450 m<sup>2</sup></p>
-          </div>
-          <div class="home__price">
-            <svg>
-              <use xlink:href="img/sprite.svg#icon-key"></use>
-            </svg>
-            <p>2,750,000
-
-            </p>
-          </div>
-          <button class="btn">contact realtor</button></div>
-          <div class="home">
-            <img src="/img/house-3.jpeg" alt="house-1" class="home__img">
-            <svg class="home__like">
-              <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-            </svg>
-            <h5 class="home__name">Cozy Country House</h5>
-            <div class="home__location">
-              <svg>
-                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-              </svg>
-              <p>UK</p>
-            </div>
-            <div class="home__rooms">
-              <svg>
-                <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-              </svg>
-              <p>4 rooms</p>
-            </div>
-            <div class="home__area">
-              <svg>
-                <use xlink:href="img/sprite.svg#icon-expand"></use>
-              </svg>
-              <p>250 m<sup>2</sup></p>
-            </div>
-            <div class="home__price">
-              <svg>
-                <use xlink:href="img/sprite.svg#icon-key"></use>
-              </svg>
-              <p>850,000</p>
-            </div>
-            <button class="btn">contact realtor</button></div>
-            <div class="home">
-              <img src="/img/house-4.jpeg" alt="house-1" class="home__img">
-              <svg class="home__like">
-                <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-              </svg>
-              <h5 class="home__name">Large Rustical Villa</h5>
-              <div class="home__location">
-                <svg>
-                  <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>Portugal</p>
-              </div>
-              <div class="home__rooms">
-                <svg>
-                  <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>6 rooms</p>
-              </div>
-              <div class="home__area">
-                <svg>
-                  <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>480 m<sup>2</sup></p>
-              </div>
-              <div class="home__price">
-                <svg>
-                  <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>1,950,000</p>
-              </div>
-              <button class="btn">contact realtor</button></div>
-              <div class="home">
-                <img src="/img/house-5.jpeg" alt="house-1" class="home__img">
-                <svg class="home__like">
-                  <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-                </svg>
-                <h5 class="home__name">Majestic Palace House</h5>
-                <div class="home__location">
-                  <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                  </svg>
-                  <p>Germany</p>
-                </div>
-                <div class="home__rooms">
-                  <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                  </svg>
-                  <p>18 rooms</p>
-                </div>
-                <div class="home__area">
-                  <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                  </svg>
-                  <p>4230 m<sup>2</sup></p>
-                </div>
-                <div class="home__price">
-                  <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                  </svg>
-                  <p>9,500,000</p>
-                </div>
-                <button class="btn">contact realtor</button></div>
-                <div class="home">
-                  <img src="/img/house-6.jpeg" alt="house-1" class="home__img">
-                  <svg class="home__like">
-                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-                  </svg>
-                  <h5 class="home__name">Modern Familiy Apartment</h5>
-                  <div class="home__location">
-                    <svg>
-                      <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                    </svg>
-                    <p>Italy</p>
-                  </div>
-                  <div class="home__rooms">
-                    <svg>
-                      <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                    </svg>
-                    <p>3 rooms</p>
-                  </div>
-                  <div class="home__area">
-                    <svg>
-                      <use xlink:href="img/sprite.svg#icon-expand"></use>
-                    </svg>
-                    <p>180 m<sup>2</sup></p>
-                  </div>
-                  <div class="home__price">
-                    <svg>
-                      <use xlink:href="img/sprite.svg#icon-key"></use>
-                    </svg>
-                    <p>600,000</p>
-                  </div>
-                  <button class="btn">contact realtor</button></div>
+          <p>Canada</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>6 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>450 m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>2,750,000</p>
+        </div>
+        <button class="btn">contact realtor</button>
+      </div>
+      <div class="home">
+        <img src="/img/house-3.jpeg" alt="house-1" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Cozy Country House</h5>
+        <div class="home__location">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>UK</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>4 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>250 m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>850,000</p>
+        </div>
+        <button class="btn">contact realtor</button>
+      </div>
+      <div class="home">
+        <img src="/img/house-4.jpeg" alt="house-1" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Large Rustical Villa</h5>
+        <div class="home__location">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Portugal</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>6 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>480 m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>1,950,000</p>
+        </div>
+        <button class="btn">contact realtor</button>
+      </div>
+      <div class="home">
+        <img src="/img/house-5.jpeg" alt="house-1" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Majestic Palace House</h5>
+        <div class="home__location">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Germany</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>18 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>4230 m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>9,500,000</p>
+        </div>
+        <button class="btn">contact realtor</button>
+      </div>
+      <div class="home">
+        <img src="/img/house-6.jpeg" alt="house-1" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Modern Familiy Apartment</h5>
+        <div class="home__location">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Italy</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>3 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>180 m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>600,000</p>
+        </div>
+        <button class="btn">contact realtor</button>
+      </div>
     </section>
-    <section class="gallary">gallary</section>
+    <section class="gallary">
+      <img src="img/gal-1.jpeg" alt="gal-1" class="img1" />
+      <img
+        src="img/gal-2.jpeg"
+        alt="gal-2"
+        class="img2"
+      /><img src="img/gal-3.jpeg" alt="gal-3" class="img3" /><img
+        src="img/gal-4.jpeg"
+        alt="gal-4"
+        class="img4"
+      /><img src="img/gal-5.jpeg" alt="gal-5" class="img5" /><img
+        src="img/gal-6.jpeg"
+        alt="gal-6"
+        class="img6"
+      /><img src="img/gal-7.jpeg" alt="gal-7" class="img7" /><img
+        src="img/gal-8.jpeg"
+        alt="gal-8"
+        class="img8"
+      /><img src="img/gal-9.jpeg" alt="gal-9" class="img9" /><img
+        src="img/gal-10.jpeg"
+        alt="gal-10"
+        class="img10"
+      /><img src="img/gal-11.jpeg" alt="gal-11" class="img11" /><img
+        src="img/gal-12.jpeg"
+        alt="gal-12"
+        class="img12"
+      /><img src="img/gal-13.jpeg" alt="gal-13" class="img13" /><img
+        src="img/gal-14.jpeg"
+        alt="gal-14"
+        class="img14"
+      />
+    </section>
     <footer class="footer">footer</footer>
   </body>
 </html>
