--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -294,36 +294,49 @@
     </section>
     <section class="gallary">
       <img src="img/gal-1.jpeg" alt="gal-1" class="img1" />
-      <img
-        src="img/gal-2.jpeg"
-        alt="gal-2"
-        class="img2"
-      /><img src="img/gal-3.jpeg" alt="gal-3" class="img3" /><img
-        src="img/gal-4.jpeg"
-        alt="gal-4"
-        class="img4"
-      /><img src="img/gal-5.jpeg" alt="gal-5" class="img5" /><img
-        src="img/gal-6.jpeg"
-        alt="gal-6"
-        class="img6"
-      /><img src="img/gal-7.jpeg" alt="gal-7" class="img7" /><img
-        src="img/gal-8.jpeg"
-        alt="gal-8"
-        class="img8"
-      /><img src="img/gal-9.jpeg" alt="gal-9" class="img9" /><img
-        src="img/gal-10.jpeg"
-        alt="gal-10"
-        class="img10"
-      /><img src="img/gal-11.jpeg" alt="gal-11" class="img11" /><img
-        src="img/gal-12.jpeg"
-        alt="gal-12"
-        class="img12"
-      /><img src="img/gal-13.jpeg" alt="gal-13" class="img13" /><img
-        src="img/gal-14.jpeg"
-        alt="gal-14"
-        class="img14"
-      />
+      <img src="img/gal-2.jpeg" alt="gal-2" class="img2" />
+      <img src="img/gal-3.jpeg" alt="gal-3" class="img3" />
+      <img src="img/gal-4.jpeg" alt="gal-4" class="img4" />
+      <img src="img/gal-5.jpeg" alt="gal-5" class="img5" />
+      <img src="img/gal-6.jpeg" alt="gal-6" class="img6" />
+      <img src="img/gal-7.jpeg" alt="gal-7" class="img7" />
+      <img src="img/gal-8.jpeg" alt="gal-8" class="img8" />
+      <img src="img/gal-9.jpeg" alt="gal-9" class="img9" />
+      <img src="img/gal-10.jpeg" alt="gal-10" class="img10" />
+      <img src="img/gal-11.jpeg" alt="gal-11" class="img11" />
+      <img src="img/gal-12.jpeg" alt="gal-12" class="img12" />
+      <img src="img/gal-13.jpeg" alt="gal-13" class="img13" />
+      <img src="img/gal-14.jpeg" alt="gal-14" class="img14" />
     </section>
-    <footer class="footer">footer</footer>
+    <!-- <figure class="gallary__item gallary__item--1"><img src="img/gal-1.jpeg" alt="gal-1" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--2"><img src="img/gal-2.jpeg" alt="gal-2" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--3"><img src="img/gal-3.jpeg" alt="gal-3" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--4"><img src="img/gal-4.jpeg" alt="gal-4" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--5"><img src="img/gal-5.jpeg" alt="gal-5" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--6"><img src="img/gal-6.jpeg" alt="gal-6" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--7"><img src="img/gal-7.jpeg" alt="gal-7" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--8"><img src="img/gal-8.jpeg" alt="gal-8" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--9"><img src="img/gal-9.jpeg" alt="gal-9" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--10"><img src="img/gal-10.jpeg" alt="gal-10" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--11"><img src="img/gal-11.jpeg" alt="gal-11" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--12"><img src="img/gal-12.jpeg" alt="gal-12" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--13"><img src="img/gal-13.jpeg" alt="gal-13" class="gallary__img"></figure>
+    <figure class="gallary__item gallary__item--14"><img src="img/gal-14.jpeg" alt="gal-14" class="gallary__img"></figure> -->
+    <!-- (figure.gallary__item.gallary__item--$>img.gallary__img[src="img/gal-$.jpeg"][alt="gal-$"])*14 -->
+    <footer class="footer">
+      <ul class="nav">
+        <a href="" class="nav__link">find your dream home</a>
+        <a href="" class="nav__link">request proposal</a>
+        <a href="" class="nav__link">download home planner</a>
+        <a href="" class="nav__link">contact us</a>
+        <a href="" class="nav__link">submit your property</a>
+        <a href="" class="nav__link">come work with us!</a>
+      </ul>
+      <p class="rights">
+        &copy; Copyright 2017 by Jonas Schmedtmann. Feel free to use this
+        project for your own purposes. This does NOT apply if you plan to
+        produce your own course or tutorials based on this project.
+      </p>
+    </footer>
   </body>
 </html>
