--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -16,8 +16,43 @@
   </head>
   <body class="container">
     <div class="sidebar"><button class="btn-nav"></button></div>
-    <header class="header">header</header>
-    <div class="realtors">realtors</div>
+    <header class="header">
+      <img src="img/logo.png" alt="nexter logo" class="header__logo">
+      <h3 class="heading--3">Your own home:</h3>
+      <h1 class="heading--1">The ultimate personal freedom</h1>
+      <button class="btn">view our properties</button>
+      <div class="header__seenon-text">seen on</div>
+      <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="">
+        <img src="img/logo-forbes.png" alt="">
+        <img src="img/logo-bi.png" alt="">
+        <img src="img/logo-techcrunch.png" alt="">
+      </div>
+    </header>
+    <div class="realtors">
+      <h3 class="heading--3">Top 3 realtors</h3>
+      <div class="realtors__list">
+        <img src="img/realtor-1.jpeg" alt="" class="realtors__img">
+        <div class="realtors__details">
+          <h4 class="heading--4 heading--4--light">Erik feinman</h4>
+          <p class="realtors__sold">245 houses sold</p>
+        </div>
+      </div>
+      <div class="realtors__list">
+        <img src="img/realtor-2.jpeg" alt="" class="realtors__img">
+        <div class="realtors__details">
+          <h4 class="heading--4 heading--4--light">Erik feinman</h4>
+          <p class="realtors__sold">245 houses sold</p>
+        </div>
+      </div>
+      <div class="realtors__list">
+        <img src="img/realtor-3.jpeg" alt="" class="realtors__img">
+        <div class="realtors__details">
+          <h4 class="heading--4 heading--4--light">Erik feinman</h4>
+          <p class="realtors__sold">245 houses sold</p>
+        </div>
+      </div>
+    </div>
     <section class="features">
       <div class="feature">
         <svg class="feature__icon">
