--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -20,7 +20,7 @@
       <img src="img/logo.png" alt="nexter logo" class="header__logo" />
       <h3 class="heading--3">Your own home:</h3>
       <h1 class="heading--1">The ultimate personal freedom</h1>
-      <button class="btn">view our properties</button>
+      <button class="btn header__btn">view our properties</button>
       <div class="header__seenon-text">seen on</div>
       <div class="header__seenon-logos">
         <img src="img/logo-bbc.png" alt="" />
@@ -37,15 +37,11 @@
           <h4 class="heading--4 heading--4--light">Erik feinman</h4>
           <p class="realtors__sold">245 houses sold</p>
         </div>
-      </div>
-      <div class="realtors__list">
         <img src="img/realtor-2.jpeg" alt="" class="realtors__img" />
         <div class="realtors__details">
           <h4 class="heading--4 heading--4--light">Erik feinman</h4>
           <p class="realtors__sold">245 houses sold</p>
         </div>
-      </div>
-      <div class="realtors__list">
         <img src="img/realtor-3.jpeg" alt="" class="realtors__img" />
         <div class="realtors__details">
           <h4 class="heading--4 heading--4--light">Erik feinman</h4>
